# EZ_Comfy

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
assets/: SCREENSHOTS.md
config/: settings.example.yaml
ez_comfy/: __main__.py  engine.py
ez_comfy/api/: models.py  routes.py  server.py
ez_comfy/comfyui/: autodetect.py  client.py  vram.py
ez_comfy/config/: schema.py
ez_comfy/hardware/: comfyui_inventory.py  probe.py
ez_comfy/models/: catalog.py  classifier.py  profiles.py
ez_comfy/planner/: intent.py  param_resolver.py  planner.py  prompt_adapter.py  provenance.py
ez_comfy/workflows/: audio.py  composer.py  img2img.py  inpaint.py  recipes.py  txt2img.py  upscale.py  video.py
spec/: IMPROVEMENTS_SPEC.md  PROVENANCE_SPEC.md
tests/integration/: test_engine.py
tests/unit/: test_autodetect.py  test_catalog.py  test_classifier.py  test_intent.py  test_inventory.py  test_param_resolver.py  test_photo_realism.py  test_planner.py  test_profiles.py  test_prompt_adapter.py  test_provenance.py  test_recipes.py  test_reviewer_fixes.py  test_vram.py  test_workflows.py
